Fix the z-index of popover colour pickers
This reverts #7bc81e3, as not breaking colour pickers seems more important than ensuring the menus displayed at the top of the playground's UI are displayed on top of monocles, but it is not fully satisfactory, and a better fix should be implemented.

--- a/src/monocle-environment.css
+++ b/src/monocle-environment.css
@@ -3,6 +3,6 @@
 @import "~@blueprintjs/core/lib/css/blueprint.css";
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
 
-.bp4-overlay-content {
+/* .bp4-overlay-content {
     z-index: 5000;
-}
+} */
